Added Navigation Drawer

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,4 +15,13 @@
         <item name="android:windowFullscreen">true</item>
     </style>
 
+    <style name="Theme.KidTasker.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.KidTasker.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.KidTasker.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
